src/main/java/com/example/domain/model/error/MigrationError.java
package com.example.domain.model.error;

public abstract class MigrationError {

    public enum Type {
        WARNING,
        VALIDATION,
        PERMISSION,
        CRITICAL
    }

    private final String message;

    protected MigrationError(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }

    public abstract Type getType();
}
